crates/toml_edit/tests/snapshots/invalid/string/bad-uni-esc-ml-1.stderr
TOML parse error at line 1, column 28
  |
1 | bad-uni-esc-ml-1 = """val\ue"""
  |                            ^
invalid unicode 4-digit hex code
